--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 ElDescontracturante.Controllers.Test/bin/
 ElDescontracturante.Controllers.Test/obj/
+ElDescontracturante.WebApplication/obj/Debug/
+.vs/
